add ALTO2PDF processor (converting ALTO→PAGE first, using 2. input fileGrp for images, no parsing/validation/repair)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 
 [project.scripts]
 ocrd-pagetopdf = "ocrd_pagetopdf.cli:ocrd_pagetopdf"
+ocrd-altotopdf = "ocrd_pagetopdf.cli:ocrd_altotopdf"
 
 [project.urls]
 Homepage = "https://github.com/UB-Mannheim/ocrd_pagetopdf"
