--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -16,6 +16,12 @@ jobs:
       # IMPORTANT: this permission is mandatory for Trusted Publishing
       id-token: write
     steps:
-      # retrieve your distributions here
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+      - name: Build package
+        run: make build
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
